--- a/android-ui/src/main/res/values/strings.xml
+++ b/android-ui/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FlickrImageGallery</string>
+    <string name="image_transition">image_transition</string>
 </resources>
